going back to previous js code to condense code and sort out bug since the current one is too long and hard to sort out where the bug would be

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,3 +104,16 @@ body {
   font-weight: bold;
   color: White;
 }
+#resetTrivia {
+  opacity: .8;
+  font-size: 40px;
+  font-family: Impact, Charcoal, sans-serif;
+  font-weight: bold;
+  width: auto;
+  border-style: solid;
+  border-width: 5px;
+  line-height: 1;
+  background-color: white;
+  color: black;
+  padding: 6px;
+}
